# rulibc

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  checkout-modules.sh  fmt.sh  restore-modules.sh  rust-toolchain  rustfmt.toml
.github/workflows/: rust.yml
core_io/: Cargo.toml  README.md
core_io/src/: lib.rs
core_io/src/io/: buffered.rs  cursor.rs  error.rs  impls.rs  mod.rs  prelude.rs  sys_io.rs  util.rs
ctypes/: check-type-size.bat  check-type-size.sh
ctypes/docs/: target-list.md  test_type_size.c  windows.md
ctypes/docs/type_size/: linux-gnu-musl-x64.txt  linux-x64.txt  mingw-i386.txt  mingw-x64.txt  msvc-i386.txt  msvc-x64.txt  msys2-x64.txt
docs/: LongDouble.md  WINDOWS.md
examples/: test.c
include/: alloca.h  complex.h  features.h  fenv.h  math.h  setjmp.h  stdarg.h  stdarg_rulibc_msvc.h  stdbool.h  stddef.h  stddef_rulibc_msvc.h  stdint.h  stdint_rulibc_msvc.h
include/bits/: errno.h  wchar.h  wchar_rulibc_msvc.h
include/sys/: __shared_header_rulibc.h  __shared_header_rulibc_msvc.h
platform_types/: Cargo.toml  test
platform_types/docs/: test_type_size.c  vxworks.md
platform_types/src/: lib.rs
src/: c_str.rs  fs.rs  io.rs  lib.rs  start.rs  start_windows.rs
src/c/: dlmalloc.c  fcntl.c  gs_support.c  stack_chk.c  tls.c  unistd.c
src/crt0/src/: lib.rs
src/crti/src/: lib.rs
src/crtn/src/: lib.rs
src/header/_aio/: cbindgen.toml
src/header/_fenv/: cbindgen.toml
src/header/_template/: cbindgen.toml
src/header/_wctype/: cbindgen.toml
src/header/arch_aarch64_user/: cbindgen.toml  mod.rs
src/header/arch_x64_user/: cbindgen.toml  mod.rs
src/header/assert/: cbindgen.toml
src/header/ctype/: cbindgen.toml
src/header/dirent/: cbindgen.toml
src/header/dl-tls/: mod.rs
src/header/dlfcn/: cbindgen.toml  mod.rs
src/header/errno/: cbindgen.toml
src/header/fcntl/: cbindgen.toml  mod.rs
src/header/float/: cbindgen.toml
src/header/fnmatch/: cbindgen.toml
src/header/getopt/: cbindgen.toml  mod.rs
src/header/grp/: cbindgen.toml
src/header/inttypes/: cbindgen.toml  mod.rs
src/header/libgen/: cbindgen.toml
src/header/limits/: cbindgen.toml  mod.rs
src/header/locale/: cbindgen.toml  mod.rs
src/header/netdb/: cbindgen.toml  host.rs  mod.rs
src/header/netinet_in/: mod.rs
src/header/poll/: cbindgen.toml
src/header/pwd/: cbindgen.toml  mod.rs
src/header/regex/: cbindgen.toml
src/header/semaphore/: cbindgen.toml
src/header/setjmp/: mod.rs
src/header/setjmp/impl/aarch64_win/: longjmp.s  setjmp.s
src/header/setjmp/impl/arm_win/: longjmp.s  setjmp.s
src/header/setjmp/impl/i386_win/: setjmp.s
src/header/sgtty/: cbindgen.toml
src/header/signal/: cbindgen.toml  mod.rs
src/header/stdio/: cbindgen.toml  ext.rs  lookaheadreader.rs  mod.rs  printf.rs  scanf.rs
src/header/stdlib/: cbindgen.toml  mod.rs
src/header/string/: cbindgen.toml  mod.rs
src/header/strings/: cbindgen.toml
src/header/sys_epoll/: mod.rs
src/header/sys_ioctl/: mod.rs
src/header/sys_mman/: mod.rs
src/header/sys_procfs/: cbindgen.toml  mod.rs
src/header/sys_ptrace/: mod.rs
src/header/sys_select/: mod.rs
src/header/sys_types/: cbindgen.toml  mod.rs
src/header/termios/: cbindgen.toml  mod.rs
src/header/time/: cbindgen.toml  constants.rs  mod.rs
src/header/time/constants/: redox.rs
src/header/unistd/: cbindgen.toml  mod.rs
src/header/utime/: cbindgen.toml
src/header/wchar/: cbindgen.toml  mod.rs
src/header/wctype/: casecmp.rs  cbindgen.toml  mod.rs
src/ld_so/: Cargo.toml  callbacks.rs  linker.rs  start.rs  tcb.rs
src/ld_so/src/: lib.rs
src/platform/: mod.rs  rlb.rs  types.rs
src/platform/allocator/: dlmalloc.rs
src/platform/redox/: ptrace.rs
src/platform/windows/: epoll.rs  mod.rs  ptrace.rs  signal.rs  socket.rs
src/sync/: mutex.rs
tests/: Cargo.toml  Makefile  build.rs
tests/src/: lib.rs
tests/string/: strstr.c
