[package]
name = "rulibc"
version = "0.1.0"
authors = ["Yonggang Luo <luoyonggang@gmail.com>", "Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"

[lib]
name = "rulibc"
crate-type = ["staticlib"]
bench = false
test = false

[build-dependencies]
cc = "1.0"

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}

cbitset = {version = "0.2.0", default-features = false, features = ["rustc-dep-of-std"]}
lazy_static = {version = "1.4.0", default-features = false, features = ["rustc-dep-of-std", "spin_no_std"]}
memchr = { version = "2.3", default-features = false, features = ["rustc-dep-of-std"]}
memoffset = { version = "0.5.5", default-features = false, features = ["rustc-dep-of-std"]}
posix-regex = { path = "posix-regex", features = ["no_std", "rustc-dep-of-std"] }
rand = { version = "0.7.4", default-features = false, features = ["use_alloc", "rustc-dep-of-std"] }
rand_xorshift = { version = "0.2.1", default-features = false, features = ["rustc-dep-of-std"] }
rand_jitter = { version = "0.3.0", default-features = false, features = ["rustc-dep-of-std"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "rustc-dep-of-std"]}

[features]
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]
default = ["rustc-dep-of-std"]
trace = []

[patch.crates-io]
# See comments in `library/rustc-std-workspace-core/README.md` for what's going on
# here
rustc-std-workspace-core = { path = 'deps/rust/library/rustc-std-workspace-core' }
rustc-std-workspace-alloc = { path = 'deps/rust/library/rustc-std-workspace-alloc' }
# rustc-std-workspace-std = { path = 'deps/rust/library/rustc-std-workspace-std' }


winapi = {path="deps/winapi-rs" }
num-traits = {path="deps/num-traits"}
cbitset = {path="deps/cbitset"}
lazy_static = {path="deps/lazy-static.rs"}
spin = {path="deps/spin-rs"}
memchr = {path="deps/rust-memchr"}
memoffset = {path="deps/memoffset"}
rand = {path="deps/rand"}
rand_core = {path="deps/rand/rand_core"}
libm = {path="deps/libm"}
rand_xorshift = {path="deps/rngs/rand_xorshift"}
rand_jitter = {path="deps/rngs/rand_jitter"}
