[package]
authors = ["Yonggang Luo <luoyonggang@gmail.com>", "Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"
name = "rulibc"
version = "0.1.0"

[lib]
bench = false
crate-type = ["rlib"]
test = false

[build-dependencies]
cc = "1.0"

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}

cbitset = {version = "0.2.0", default-features = false, features = ["rustc-dep-of-std"]}
lazy_static = {version = "1.4.0", default-features = false, features = ["rustc-dep-of-std", "spin_no_std"]}
memchr = { version = "2.3", default-features = false, features = ["rustc-dep-of-std"]}
memoffset = { version = "0.5.5", default-features = false, features = ["rustc-dep-of-std"]}
posix-regex = { path = "posix-regex", features = ["no_std", "rustc-dep-of-std"] }
rand = { version = "0.7.4", default-features = false, features = ["use_alloc", "rustc-dep-of-std"] }
rand_xorshift = { version = "0.2.1", default-features = false, features = ["rustc-dep-of-std"] }
rand_jitter = { version = "0.3.0", default-features = false, features = ["rustc-dep-of-std"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "rustc-dep-of-std"]}

[features]
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]
default = []
trace = []
